# TELEports

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  clickable.yaml  manifest.json.in  teleports.apparmor  teleports.desktop.in
app/: CMakeLists.txt  main.cpp  messagecontentdelegatemap.cpp  messagedelegatemap.cpp
app/qml/: Main.qml  qml.qrc
app/qml/actions/: AuthAction.qml  AuthKey.qml  BackAction.qml  ChatActions.qml  ChatKey.qml  SettingsActions.qml  SettingsKey.qml  UserStateActions.qml  UserStateKey.qml  ViewActions.qml  ViewKeys.qml
app/qml/components/: AdvancedDateTimePicker.qml  AttachPanel.qml  AttachPanelItem.qml  AutoCloseNotification.qml  BusyPercentageIndicator.qml  Citation.qml  CountryPicker.qml  DeleteDialog.qml  EmbeddedNotification.qml  FastScroll.qml  FlyingButton.qml  FormattedText.qml  GenericPhoto.qml  GroupPreviewDialog.qml  InputInfoBox.qml  MediaImport.qml  MediaViewer.qml  MenuPanelItem.qml  MessageStatusIndicator.qml  MessageStatusRow.qml  PopupDialog.qml  PopupWaitCancel.qml  ReplyMarkupShowKeyboard.qml  SendMediaDialog.qml  SendMessageOptionsDialog.qml  SetTTLDialog.qml  StickerPanel.qml  StickerSetsBox.qml  UserProfile.qml  WaitingBar.qml  WebPagePreview.qml
app/qml/delegates/: MessageActionItem.qml  MessageBubbleItem.qml  MessageChatChangePhoto.qml  MessageChatSetMessageAutodeleteTime.qml  MessageContentAnimation.qml  MessageContentAudio.qml  MessageContentBase.qml  MessageContentCall.qml  MessageContentContact.qml  MessageContentDocument.qml  MessageContentLocation.qml  MessageContentPhoto.qml  MessageContentPoll.qml  MessageContentSticker.qml  MessageContentText.qml  MessageContentVideo.qml  MessageContentVideoNote.qml  MessageContentVoiceNote.qml  MessageDateItem.qml  MessagePhotoItem.qml  MessagePollItem.qml
app/qml/icons/: icons.qrc
app/qml/middleware/: ChatMiddleware.qml  ErrorsMiddleware.qml  SettingsMiddleware.qml  StackMiddleware.qml
app/qml/pages/: AboutPage.qml  ChatInfoPage.qml  ChatListPage.qml  ConnectivityPage.qml  LogoutPage.qml  MessageListPage.qml  PickerPage.qml  PreviewPage.qml  ProxyManagementPage.qml  SecretChatKeyHashPage.qml  SettingsPage.qml  UserListPage.qml  WaitCodePage.qml  WaitPasswordPage.qml  WaitPhoneNumberPage.qml  WaitRegistrationPage.qml  pageutils.js
app/qml/stores/: AuthStateStore.qml  ChatStateStore.qml  ConnectionsStore.qml  (+4 more)
app/ui-tools/: offloadingimageprovider.cpp  offloadingimageprovider.h
common/auxdb/: postal-client.cpp
libs/qtdlib/: CMakeLists.txt
libs/rlottie-qml/: CMakeLists.txt  LICENSE  README.md  clickable.json
libs/rlottie-qml/cmake/: rLottieQmlConfig.cmake.in
libs/rlottie-qml/qml/: LottieAnimation.qml  qml.qrc
libs/rlottie-qml/src/: plugin.cpp  plugin.h  qlottieframeprovider.cpp  qlottieframeprovider.h  qmldir
po/: aa.po  ab.po  abr.po  ady.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bem.po  bg.po  bn_BD.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_IE.po  en_US.po  enm.po  eo.po  es.po  es_BO.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_AG.po  fr_CA.po  (+83 more)
push/: pushhelper.cpp  pushhelper.h
(+328 files in other folders)
